# primejob

./: .gitignore  README.md  llms.txt  pyproject.toml
examples/: README.md  demo.tape  demo_tui.py  hello_train.py
examples/hf-sentiment-json/: README.md  pyproject.toml  train.py
examples/hf-sentiment-json/data/: train.json
examples/image-folder-torch/: README.md  pyproject.toml  train.py
examples/unsloth-sft/: README.md  pyproject.toml  train.py
scripts/: record_demo_gif.sh
src/primejob/: _atomic.py  _retry.py  auth.py  cleanup.py  cli.py  config.py  dataset.py  events.py  onboarding.py  packaging.py  packaging_ui.py  pricing.py  reconcile.py  run.py  runtime.py  state.py  watchdog.py
src/primejob/backend/: disks.py  pods.py  ssh.py
src/primejob/tui/: __init__.py  app.py  state.py  styles.tcss  theme.py
src/primejob/tui/screens/: help.py  preflight.py  summary.py  terminate.py
src/primejob/tui/widgets/: gpus.py  header.py  log.py  meta.py  stepper.py
src/primejob/tui/workers/: log_tail.py  nvidia.py
tests/: test_atomic.py  test_auth_ssh.py  test_cleanup.py  test_cli.py  test_cli_package.py  test_config.py  test_dataset_push_paths.py  test_disks.py  test_error_patterns.py  test_log_tail_seek.py  test_packaging.py  test_packaging_ui.py  test_pods_delete.py  test_pods_install_gate.py  test_pods_ssh_key_id.py  test_pods_terminate.py  test_pricing.py  test_reconcile.py  test_retry.py  test_run_commands.py  test_run_modes.py  test_run_provider_fallback.py  test_runtime.py  test_ssh_endpoint.py  test_ssh_wait.py  test_tui.py  test_watchdog.py
(+4 files in other folders)
